tests/import_std_testing_bad.stderr
error: failed to resolve package path /Users/rsms/src/slang.context-v2/std/testing
tests/import_std_testing_bad.sl:2:1: error: SL0000: failed to resolve import std/testing
