tests/import_std_testing_bad.sl
// Verifies std/testing is not a supported library import path.
import "std/testing" { FailingAllocator }

fn main() {
	var _ma = FailingAllocator{}
}
